# ocl-stream-rs

./: Cargo.toml  README.md
src/: lib.rs
src/executor/: context.rs  mod.rs  ocl_stream.rs  stream.rs
src/traits/: mod.rs  to_ocl_buffer.rs  to_shared_buffer.rs
src/utils/: mod.rs  result.rs  shared_buffer.rs
