[package]
name = "ocl-stream"
description = "OpenCL Stream execution framework"
repository = "https://github.com/parallel-programming-hwr/ocl-stream-rs"
license = "Apache-2.0"
readme = "README.md"
version = "0.3.4"
authors = ["Trivernis <trivernis@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ocl = "0.19.3"
num_cpus = "1.13.0"
crossbeam-channel = "0.5.0"
thiserror = "1.0.23"
parking_lot = "0.11.1"